--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,23 +1,23 @@
 version: '3'
 services:
-  fe-app:
-    image: mukunthan1502/mukun-repo:audio-host-app-client-fe
-    environment:
-      PORT: 3000
-      REACT_APP_PROXY_API:  http://localhost:5555
-    ports:
-      - 3000:3000
-    restart: on-failure
-  be-app:
-    image: mukunthan1502/mukun-repo:audio-host-app-server-be
-    environment:
-      PORT: 5555
-      MONGO_DB_USERNAME: admin
-      MONGO_DB_PWD: password
-      MONGO_URL: mongodb://admin:password@mongodb
-    ports:
-      - 5555:5555
-    restart: on-failure
+  # fe-app:
+  #   image: mukunthan1502/mukun-repo:audio-host-app-client-fe
+  #   environment:
+  #     PORT: 3000
+  #     REACT_APP_PROXY_API:  http://localhost:5555
+  #   ports:
+  #     - 3000:3000
+  #   restart: on-failure
+  # be-app:
+  #   image: mukunthan1502/mukun-repo:audio-host-app-server-be
+  #   environment:
+  #     PORT: 5555
+  #     MONGO_DB_USERNAME: admin
+  #     MONGO_DB_PWD: password
+  #     MONGO_URL: mongodb://admin:password@mongodb
+  #   ports:
+  #     - 5555:5555
+  #   restart: on-failure
   mongodb:
     image: mongo
     ports:
